fix overflow

--- a/src/scss/_boilerplate.scss
+++ b/src/scss/_boilerplate.scss
@@ -10,6 +10,11 @@
     background-color: a.$dark;
   }
 
+  main {
+      max-width: 100vw;
+      overflow-x: hidden;
+  }
+
   button {
       background: none;
       border: none;
